Convert the project to TypeScript and add gitlab ci badge

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         itaque consectetur expedita. Libero, repudiandae?
       </li>
     </ul>
-    <script type="module" src="./scripts/index.js">
+    <script type="module" src="./scripts/index.ts">
     </script>
 </body>
 </html>
